--- a/limma_tutorial.Rmd
+++ b/limma_tutorial.Rmd
@@ -15,7 +15,7 @@ output:
 
 
 ```{r setup, include=FALSE, fig.align='center',fig.width=5,fig.height=4}
-knitr::opts_chunk$set(echo =TRUE, include = TRUE, message = FALSE,warning = FALSE)
+knitr::opts_chunk$set(echo =TRUE, include = TRUE, message = FALSE,warning = FALSE,fig.align='center',fig.width=5,fig.height=4)
 ```
 
 ___
@@ -162,7 +162,7 @@ data.Mono_vs_K48 <- data.mat[,grepl("FS20160721_OA_E15_polUB_Fractions..127C.126
 Again, we stick the gene names (or accession numbers) into the expression set as row.names to the data.matrix before fitting the model. This is not required, but makes the analysis more intuitive.
 
 ```{r}
-row.names(data.Mono_vs_K48) <- data.mat$accession_number # We stick the gene names into the expression set as row.names
+row.names(data.Mono_vs_K48) <- row.names(data.mat) # We stick the gene names into the expression set as row.names
 names(data.Mono_vs_K48)
 ```
 
@@ -170,13 +170,15 @@ names(data.Mono_vs_K48)
 
 Note that the order of the columns in the data.martix are critical. They represent the individual biological replicates of the groups. We need to construct the design matrix to properly match each of the replicate to its respective class.
 
-Therefore, note that order of group labels are the same as what samples refer to in design matrix (respective column names)
+Therefore, note that order of group labels are the same as what samples they refer to in the design matrix (respective column names).
 
 ```{r}
-Group <- factor(c("Mono","K48","Mono","K48"), levels = c("Mono","K48")) # Note the order of group #labels that match the columns in the data matrix. Order the levels so that they appear as #(reference, comparison)
+Group <- factor(c("Mono","K48","Mono","K48"), levels = c("Mono","K48")) # Note the order of group labels that match the columns in the data matrix. Order the levels so that they appear as (reference, comparison)
 design.matrix <- model.matrix(~ Group) # Note the use of model.matrix() function
 design.matrix
 ```
+
+**Note that the choice of the reference group (i.e: the first factor level in the Group), has important consequences in terms of interpretation of the model (see 3.5 below).**
 
 - Notice that the first column represents the intercept of the model, which is "Mono" group (which is Mono_vs_Control log expression ratios for each gene).
 
@@ -189,7 +191,7 @@ row.names(design.matrix) <- colnames(data.Mono_vs_K48)
 design.matrix
 ```
 
-Note the interpretation of the design matrix, the meaning of 1's and 0's.
+Note the interpretation of the design matrix, particularly the meaning of 1's and 0's.
 
 First, it is always helpful to write the model equation we are fitting:
 
@@ -201,14 +203,14 @@ Where;
 - For Reference group (mono); Y = B0 + B1 * 0 = B0 (Since GroupK48 = 0, remember design matrix)
 - For Comparison group (K48); Y = B0 + B1 * 1 = B0 + B1 (Since GroupK48 = 1, remember design matrix)
 
-Therefore, the design matrix reflects that with 1's and 0's for each class (or condition, or column). 
+Therefore, the design matrix reflects the model by using 1's and 0's for each class (or condition, or column). 
 
 In other words,
 
-- Intercept is 1 for all classes, because we have and intercept in all cases
-- GroupK48 is 1 for K4 group and 0 for the Mono group, meaning that GroupK48 has also a slope
+- Intercept is 1 for all classes, because we have at least an intercept in all cases
+- GroupK48 is 1 for K48 group and 0 for the Mono group, meaning that GroupK48 has also a slope, in addition to an intercept.
 
-Now, things are getting more intuitive in terms of a standard linear regression model.
+Now, things are getting more intuitive in terms of interpreting a standard linear regression model.
 
 ## Fitting the two-comparison model by using lmFit() and eBayes()
 
@@ -291,13 +293,15 @@ Where;
 - B0: intercept: mean expression ratio for the reference group (relative to control)
 - B1: slope (coefficient): mean log expression difference (mean(logFC)) between the comparison - reference group for a given gene
 
-Therefore, 
+**Note that the choice of the reference group (i.e: the first factor level in the Group), has important consequences in terms of interpretation of the model. All comparisons (or contrasts) we will make using this model will be relative to this reference category.**
+
+Therefore, to summarize what we have performed so far: 
 
 1. We are fitting N (nrow(data.matrix)) of such models for each gene,
-2. Then making parameters robust by applying embrical Bayes shrinkage method
-3. Adjusting the p-values associated with the parameter of interest to make robust inferences (control alpha-level) 
+2. Then making parameters robust by applying embrical Bayes shrinkage method (because we have only few independent measurements for each gene (or model), thus we utilize the variability from the entire data set to make our standard error estimates more robust).
+3. Adjusting the p-values associated with the parameter of interest to make robust inferences (control alpha-level). 
 
-- Note that the coefficient of interest in this model is B1, which is the mean log expression difference between two groups.
+- Note that the coefficient of interest in this model is B1, which is the mean log expression difference between the two groups.
 
 - Note that the null hypothesis of interest in this model is B1 != 0 (MeanComparison - MeanRef)
 
@@ -314,5 +318,53 @@ We couldn't find any genes whose expression ratio is significantly different bet
 Distribution of p-values also suggest the overall non-significance of the changes:
 
 ```{r}
-hist(two.group.significance$P.Value)
+hist(two.group.significance$P.Value, breaks = 50, col = "navy")
 ```
+
+# Comparisons involving several groups
+
+It is not uncommon that we have more than two groups in the experiment and we might be interested in multiple contrasts. This can be handled by using the same strategy we used for the two-group comparison, with some additional modifications.
+
+##Preparing the data matrix
+
+For this example, let's include a 3rd group into the data.martix, which is K63. Therefore, we will have the following biological replicates for each group:
+
+- column names for the two independent biological replicates of Mono-UB group:
+
+FS20160721_OA_E15_polUB_Fractions..127C.126..Mono_Ub_iDUB.Control	
+FS20160721_OA_E15_polUB_Fractions..129C.131..Mono_Ub_iDUB.Control
+
+
+- column names for the two independent biological replicates of K48 group:
+
+FS20160721_OA_E15_polUB_Fractions..128C.126..Tetra_Ub_K48_iDUB.Control	
+FS20160721_OA_E15_polUB_Fractions..130C.131..Tetra_Ub_K48_iDUB.Control	
+
+- column names for the two independent biological replicates of K63 group:
+
+FS20160721_OA_E15_polUB_Fractions..128N.126..Tetra_Ub_K63_iDUB.Control	
+FS20160721_OA_E15_polUB_Fractions..130N.131..Tetra_Ub_K63_iDUB.Control	
+
+
+```{r}
+data.3.groups <- data.mat[,grepl("FS20160721_OA_E15_polUB_Fractions..127C.126..Mono_Ub_iDUB.Control|FS20160721_OA_E15_polUB_Fractions..129C.131..Mono_Ub_iDUB.Control|128C.126..Tetra_Ub_K48_iDUB.Control|130C.131..Tetra_Ub_K48_iDUB.Control|FS20160721_OA_E15_polUB_Fractions..128N.126..Tetra_Ub_K63_iDUB.Control|FS20160721_OA_E15_polUB_Fractions..130N.131..Tetra_Ub_K63_iDUB.Control",names(data.mat))]
+```
+
+Again, we stick the gene names (or accession numbers) into the expression set as row.names to the data.matrix before fitting the model. This is not required, but makes the analysis more intuitive.
+
+```{r}
+row.names(data.3.groups) <-  row.names(data.mat) # We stick the gene names into the expression set as row.names
+head(data.3.groups)
+```
+
+## Design matrix for several groups
+
+Once again we will need our design matrix that has to properly match the data.matrix columns and describe the fitted model for each gene:
+
+```{r}
+names(data.3.groups)
+Group <- factor(c("Mono","K63","K48","Mono","K63","K48"), levels = c("Mono","K48","K63")) # Note the order of group labels that match the columns in the data matrix. Order the levels so that they appear as (reference, comparison)
+design.matrix <- model.matrix(~ Group) # Note the use of model.matrix() function
+design.matrix
+```
+
