--- a/limma_tutorial.Rmd
+++ b/limma_tutorial.Rmd
@@ -232,7 +232,7 @@ Finally, we obtain the results:
 
 ```{r}
 two.group.significance <- topTable(fit.two.group, coef = "GroupK48", adjust.method = "fdr",
-                                   number = nrow(data.mat), sort.by = "none", confint = TRUE)
+                                   number = nrow(data.Mono_vs_K48), sort.by = "none", confint = TRUE)
 ```
 
 ## Interpretation of the model and coefficients for the two-sample comparison:
@@ -256,14 +256,14 @@ head(fit.two.group$coefficients)
 - Note that the AveExpr refers to the average expression of each gene in the data set, regardless of groups. This is not the estimate used and tested in our model:
 
 ```{r}
-head(apply(data.mat,1,mean))
+head(apply(data.Mono_vs_K48,1,mean))
 ```
 
 Intuitively, logFC is defined as the mean difference between the groups (the estimate (or coefficient of our test of interest:
 
 ```{r}
-Mono_mean <- head(apply(data.mat[,c(1,3)],1,mean))
-K48_mean <- head(apply(data.mat[,c(2,4)],1,mean))
+Mono_mean <- head(apply(data.Mono_vs_K48[,c(1,3)],1,mean))
+K48_mean <- head(apply(data.Mono_vs_K48[,c(2,4)],1,mean))
 K48_mean - Mono_mean
 ```
 
@@ -313,7 +313,7 @@ Therefore, the design matrix is nothing but a collection of dummy variables, and
 two.group.significance[two.group.significance$adj.P.Val <0.05,]
 ```
 
-We couldn't find any genes whose expression ratio is significantly different between K48 and Mono UB.
+We couldn't find any genes whose average expression ratio is significantly different between K48 and Mono UB.
 
 Distribution of p-values also suggest the overall non-significance of the changes:
 
